--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ ninja
 tabulate
 psutil
 tensorboard
+questdb
 
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
